managed some styles nad routes

--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -8,6 +8,8 @@ nav {
   justify-content: space-between;
   padding-left: 1.5em;
   padding-right: 1.5em;
+  position: fixed;
+  top: 0;
 }
 ul {
   display: flex;
@@ -25,20 +27,31 @@ li {
   flex-direction: row;
   gap: 5px;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 1.2vw;
 }
 .siteName {
   font-weight: bold;
-  font-size: 28px;
+  font-size: 1.7vw;
   color: #50fa7b;
   cursor: pointer;
 }
 .cartNum {
   position: absolute;
   z-index: 1;
-  top: 0.5%;
-  left: 95.6%;
+  top: -35.5%;
+  left: 1.3em;
 }
 .cart {
+  position: relative;
   color: #ff5555;
+}
+.icon {
+  height: auto;
+  width: 1.2vw;
+}
+li:hover {
+  color: #6272a4;
+}
+.cart:hover {
+  color: #50fa7b;
 }
